# stunning-calculator

./: .gitignore  CMakeLists.txt  README.md  automatic_tests.sh
src/: calculator.cpp  calculator.h  calculatorTest.cpp  main.cpp  parser.cpp  parser.h  parserTest.cpp
test_data/: expected.txt  result.txt  test_cases.txt
